Fixed height not aligned

--- a/_sass/project-card.scss
+++ b/_sass/project-card.scss
@@ -3,7 +3,6 @@
     color: inherit !important;
     border: $border-width solid var(--muted-bg);
     padding: 1rem;
-    height: fit-content;
 
     &:hover {
         background-color: var(--muted-bg);
